--- a/angular.json
+++ b/angular.json
@@ -131,7 +131,7 @@
       "prefix": "lib",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/reportviewer/tsconfig.lib.json",
             "project": "projects/reportviewer/ng-package.json"
