--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-ssrs-reportviewer-custom",
+  "name": "ngx-ssrs-reportviewer-custom-a13",
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
@@ -17,14 +17,14 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "13.1.3",
-    "@angular/common": "13.1.3",
-    "@angular/compiler": "13.1.3",
-    "@angular/core": "13.1.3",
-    "@angular/forms": "13.1.3",
-    "@angular/platform-browser": "13.1.3",
-    "@angular/platform-browser-dynamic": "13.1.3",
-    "@angular/router": "~13.1.3",
+    "@angular/animations": "~13.3.0",
+    "@angular/common": "~13.3.0",
+    "@angular/compiler": "~13.3.0",
+    "@angular/core": "~13.3.0",
+    "@angular/forms": "~13.3.0",
+    "@angular/platform-browser": "~13.3.0",
+    "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/router": "~13.3.0",
     "bootstrap": "5.1.3",
     "rxjs": "~7.5.2",
     "schematics-utilities": "2.0.3",
@@ -32,10 +32,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.1.3",
-    "@angular-devkit/build-ng-packagr": "^0.1002.0",
-    "@angular/cli": "13.2.0",
-    "@angular/compiler-cli": "13.2.0",
+    "@angular-devkit/build-angular": "^13.3.5",
+    "@angular/cli": "~13.3.5",
+    "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "3.10.3",
     "@types/jasminewd2": "2.0.10",
     "@types/node": "17.0.13",
@@ -47,11 +46,11 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "1.7.0",
-    "ng-packagr": "13.1.3",
+    "ng-packagr": "13.3.1",
     "protractor": "~7.0.0",
     "ts-node": "~10.4.0",
     "tslint": "~6.1.0",
-    "typescript": "4.5.5",
+    "typescript": "~4.6.2",
     "webpack": "5.67.0",
     "webpack-cli": "4.9.2",
     "webpack-node-externals": "3.0.0"
