--- a/projects/reportviewer/package.json
+++ b/projects/reportviewer/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ngx-custom-ssrs-reportviewer",
-  "version": "3.1.1", 
-  "author": "Tyler Como",
-  "description": "Angular component for rendering SSRS reports",
+  "name": "ngx-custom-ssrs-reportviewer-custom-a13",
+  "version": "3.1.2",
+  "author": "Tyler Como (forked and updated to Angular 13 by MattMx)",
+  "description": "Angular 13.3 component for rendering SSRS reports",
   "homepage": "https://github.com/tycomo/ngx-ssrs-reportviewer",
   "license": "MIT",
   "keywords": [
@@ -15,12 +15,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/JJU115/ngx-ssrs-reportviewer"
+    "url": "https://github.com/MattMx/ngx-ssrs-reportviewer"
   },
   "schematics": "./schematics/collection.json",
   "peerDependencies": {
-    "@angular/common": "13.1.3",
-    "@angular/core": "13.1.3"
+    "@angular/common": "~13.3.0",
+    "@angular/core": "~13.3.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
